# wannatry-ransomware

./: .gitignore  Cargo.toml  README.md  priv.key
client/: Cargo.toml  build.txt  pub.key
client/src/: main.rs
decrypt/: Cargo.toml
decrypt/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
