[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9.0"
rand = "0.8.5"
rand_core = "0.6.4"
sodiumoxide = "0.2.7"
argon2 = "0.5.0"
anyhow = "1.0.65"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }